# axonos-protocol

./: CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SPEC.md  apply.sh  deny.toml  scrub.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cbor_decode.rs  fuzz_cbor_roundtrip.rs
src/: engine.rs  error.rs  frames.rs  invariants.rs  lib.rs  reason.rs  state.rs  stim_guard.rs
src/codec/: cbor.rs  json.rs  mod.rs
tests/: consent_interop.rs
tests/vectors/: SHA256SUMS  consent-interop-vectors-v0.1.0.json
