[package]
name = "axonos-consent"
version = "0.2.2"
edition = "2021"
authors = ["Denis Yermakou <axonosorg@gmail.com>"]
description = "MMP Consent Extension — reference implementation. Deterministic consent enforcement for BCI cognitive mesh coupling. Aligned with MMP v0.2.2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/AxonOS-org/axonos-consent"
keywords = ["bci", "consent", "mmp", "real-time", "no_std"]
categories = ["embedded", "no-std"]
readme = "README.md"

[features]
default = []
alloc = []
json = ["alloc", "dep:serde_json"]
std = ["json"]
stim-guard = []

[dependencies]
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
