[package]
name = "axonos-protocol"
version = "0.9.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Denis Yermakou <connect@axonos.org>"]
description = "The AxonOS Consent Protocol — reference implementation. no_std, zero-alloc, forbid(unsafe): bounded CBOR codec, exhaustive consent state machine, and StimGuard for brain–computer interfaces."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/AxonOS-org/axonos-protocol"
homepage = "https://axonos.org"
keywords = ["bci", "consent", "protocol", "real-time", "no-std"]
categories = ["embedded", "no-std"]
readme = "README.md"

[features]
default = []
alloc = []
json = ["alloc", "dep:serde_json"]
std = ["json"]
stim-guard = []

[dependencies]
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
